Fix header z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,6 +11,7 @@
 }
 
 .header-cont {
+    z-index: 4;
     width:100%;
     position:fixed;
     top:0px;
